2002-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Split nt.c into ntbase.c and ntfeature.c
  * Split nt.h into ntbase.h and ntfeature.h
  * Invoke NTIsMagickConflict() under Cygwin to ensure that
    drive letters in file specifications are not confused with
    magick strings.
  * Invoke NTGetTypeList() under Cygwin to read the list of
    Windows fonts.

2002-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Created Windows "setup.exe" style installation package for
    ImageMagick.
  * Include PerlMagick Perl extension for ActiveState ActivePerl as
    checkmark install option in Windows installation package.
  * Include ImageMagickObject OLE Object for WSH and Visual Basic (not
    IIS!!!) as checkmark install option in Windows installation package.
  * Windows installation package establishes file extension associations
    for ImageMagick.

2002-07-17  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * PPM files were being written in P4 or P5 format if all pixels
    were gray.  This is correct behavior for the PNM format but not for
    the PPM format.

2002-07-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Load font information from Windows rather than depending on hand
    edited type-windows.mgk file. Still not incorporated in Cygwin build.

2002-07-04  Cristy  <cristy@mystic.es.dupont.com>
  * Typos corrected in perl.html (thanks to Ron Savage);
  * A color profile is now correctly referred to as ICM instead of IPTC.
  * Added XPM color compliance to colors.mgk.
  * $image->Get('clip-mask') now returns the clipping image.

2002-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added NTRegistryKeyLookup() to nt.c in order to look up ImageMagick
    installation parameters from the Windows Registry.
  * Updated GetMagickConfigurePath() in magick.c to use installation
    path data from the Windows Registry (if available).
  * Updated VisualMagick/ImageMagick.iss so that Windows Registry is